feat: Add read checkbox

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    appearance: none;
+    /* appearance: none; */
     text-decoration: none;
     list-style: none;
 }
