--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     /* appearance: none; */
+    outline: none;
     text-decoration: none;
     list-style: none;
 }
@@ -13,12 +14,14 @@
     --black: rgb(37, 37, 37);
     --lightBlack: rgb(44, 44, 44);
     --lightShade: rgba(255, 255, 255, 0.05);
+    --accentColor: rgb(255, 208, 0);
 }
 
 body {
     display: grid;
     grid-template-columns: max-content 1fr;
     color: white;
+    font-family: Arial, Helvetica, sans-serif, system-ui;
 }
 
 nav {
@@ -107,3 +110,69 @@ article {
         height: 30px;
     }
 }
+
+#newBookModal {
+    margin: auto;
+    width: 400px;
+    height: fit-content;
+    border: none;
+    border-radius: 10px;
+    background-color: var(--lightBlack);
+    color: white;
+
+    .newBookWrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        padding: 40px;
+        flex-direction: column;
+        gap: 20px;
+        justify-content: center;
+        align-items: stretch;
+        text-align: center;
+    }
+    
+    .titleWrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .titleWrapper input {
+        width: 28px;
+        height: 28px;
+    }
+
+    & h1 {
+        font-size: 28px;
+    }
+
+    & input:not([type="image"]), & button {
+        height: 40px;
+        border-radius: 100px;
+        padding: 0 15px;
+        border: none;
+        font-size: 20px;
+    }
+
+    & input:not([type="image"]) {
+        background-color: var(--lightShade);
+        color: white;
+    }
+
+    & button {
+        background-color: var(--accentColor);
+    }
+
+    .checkboxWrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        gap: 20px;
+    }
+}
+
+
+
+
