--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ nav {
 
     & h1 {
         font-size: 35px;
-        padding-left: 15px;
     }
 
     & .buttons {
@@ -82,6 +81,7 @@ article {
     width: min-content;
     display: flex;
     flex-direction: column;
+    position: relative;
 
     & .title {
         font-size: 20px;
@@ -94,12 +94,12 @@ article {
         margin: 0 5px;
     }
 
-    & img {
+    & img:not(.readStatus) {
         height: 450px;
         border-radius: 10px;
     }
 
-    & > div {
+    & > div:not(.triangle) {
         margin: 10px 5px 5px 5px;
         display: flex;
         justify-content: space-between;
@@ -108,6 +108,26 @@ article {
     & input {
         width: 30px;
         height: 30px;
+    }
+
+    .triangle {
+        border-left: 50px solid transparent;
+        border-right: 50px solid var(--accentColor);
+        border-top: 50px solid var(--accentColor);
+        border-bottom: 50px solid transparent;
+        position: absolute;
+        top: 0;
+        right: 0;
+        border-top-right-radius: 10px;
+    }
+
+    .readStatus {
+        position: absolute;
+        top: 6px;
+        right: 6px;
+        z-index: 2;
+        width: 40px;
+        height: 40px;
     }
 }
 
@@ -147,7 +167,7 @@ article {
         font-size: 28px;
     }
 
-    & input:not([type="image"]), & button {
+    & input:not([type="image"]):not([type="file"]), & button {
         height: 40px;
         border-radius: 100px;
         padding: 0 15px;
@@ -155,7 +175,7 @@ article {
         font-size: 20px;
     }
 
-    & input:not([type="image"]) {
+    & input:not([type="image"]):not([type="file"]) {
         background-color: var(--lightShade);
         color: white;
     }
@@ -172,6 +192,7 @@ article {
         gap: 20px;
     }
 }
+
 
 
 
