--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --lightBlack: rgb(44, 44, 44);
     --lightShade: rgba(255, 255, 255, 0.05);
     --accentColor: rgb(255, 208, 0);
+    --accentColorDark: rgb(211, 172, 0);
     --red: rgb(197, 61, 61);
 }
 
@@ -58,6 +59,9 @@ nav {
         display: flex;
         align-items: center;
         gap: 10px;
+        cursor: pointer;
+        transition-duration: 200ms;
+        transition-property: background-color;
     }
 
     & button:hover {
@@ -195,6 +199,13 @@ article {
 
     & button {
         background-color: var(--accentColor);
+        cursor: pointer;
+        transition-duration: 200ms;
+        transition-property: background-color;
+
+        &:hover {
+            background-color: var(--accentColorDark);
+        }
     }
 
     .checkboxWrapper {
@@ -203,6 +214,22 @@ article {
         align-items: center;
         font-size: 20px;
         gap: 20px;
+    }
+
+    #newBookRead {
+        cursor: pointer;
+    }
+
+    #closeModal {
+        box-sizing: content-box;
+        padding: 5px;
+        border-radius: 100px;
+        transition-duration: 200ms;
+        transition-property: background-color;
+
+        &:hover {
+            background-color: var(--lightShade);
+        }
     }
 }
 
